# zerOS

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  i686-unknown-none-elf.json  install-deps.bat  install-deps.sh
.cargo/: config.toml
iso/boot/grub/: grub.cfg
src/: kernel.asm  lib.rs  linker.ld  main.rs
src/boot/: boot.asm  header.asm  main.asm  main64.asm
src/modules/: panic_handler.rs  uart.rs  vga.rs
src/tests/: basic.rs
tests/: basic.rs
